@@ -19,6 +19,8 @@ Revision history for Perl extension App::Sqitch
      - Updated PostgreSQL registry detection to avoid errors when the `psql`
        client is newer than the server version. Sqitch now fetches the version
        from the server instead of parsing it from the client.
+     - Specifying a change before a target name on the command-line no longer
+       ignores the target (#281).
 
 0.9995 2016-07-27T09:23:55Z
      - Taught the `add` command not to ignore the `--change` option.
